# homelab-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
commands/backups/: install-daily-backup-launchd.sh  run-unraid-backup.sh  uninstall-daily-backup-launchd.sh
commands/surge/: Extract-PaoluzX-HK+TW.command  Extract-PaoluzX-HK.command  Extract-PaoluzX-TW.command  Update-PaoluzX-From-Link.command
docs/: README.md  architecture.md  roadmap.md
docs/ai/: harness-workflow.md  project-overview.md  reference-repos.md
docs/ai/modules/: core-runtime.md  home-assistant.md  local-docker.md  mikrotik.md  unraid.md
docs/operations/: 2026-04-24-home-assistant-restart-light-false-positives.md  2026-04-24-unraid-docker-update-check-troubleshooting.md  2026-04-29-home-assistant-area-governance-and-xiaomi-dedupe.md  2026-05-16-home-assistant-full-config-review.md  session-handoff.md
docs/superpowers/plans/: 2026-04-19-unraid-targeted-network-acceleration.md
docs/superpowers/specs/: 2026-04-19-unraid-targeted-network-acceleration-design.md
src/homelab_agent/: __init__.py  bootstrap.py  cli.py
src/homelab_agent/config/: __init__.py  loader.py  models.py
src/homelab_agent/core/: __init__.py  audit.py  router.py  service.py
src/homelab_agent/executors/: __init__.py
src/homelab_agent/models/: __init__.py  result.py  risk.py  task.py
tests/: __init__.py  test_bootstrap.py  test_cli.py  test_cli_smoke.py
tests/config/: test_loader.py
tests/core/: test_audit.py  test_router.py  test_service.py
tests/models/: test_task.py
(+19 files in other folders)
