[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-agent"
version = "0.1.0"
description = "Repo-local execution toolkit for Codex to operate homelab targets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.7,<3.0",
]

[project.scripts]
homelab-agent = "homelab_agent.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
